src/main/kotlin/com/example/error/OutOfIndexException.kt
package com.example.error

class OutOfIndexException: Exception("index is out of Range")